[package]
name = "node_handshake"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.28.0", features = ["full"] }
bytes = "1.5.0"
sha256 = { version = "1.4.0"}
hex = "0.4.3"

ed25519-dalek = { version = "1.0.1", features = ["rand_core"] }
rand = { version = "0.7.0", features = ["std"] }
bs58 = "0.5.0"

borsh = "1.2.1"
thiserror = "1.0.50"

near-crypto = "0.15.0"
near-primitives = "0.15.0"
near-network-primitives = "0.15.0"

protobuf = "3.3.0"

[build-dependencies]
protobuf-codegen = "3.3.0"