[package]
name = "node_handshake"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.28.0", features = ["full"] }
bytes = "1.5.0"

clap = { version = "4.4.11", features = ["derive"] }

ed25519-dalek = { version = "1.0.1", features = ["rand_core"] }
rand = { version = "0.7.0", features = ["std"] }

near-crypto = "0.15.0"
near-primitives = "0.15.0"
near-network-primitives = "0.15.0"

borsh = "1.2.1"
protobuf = "3.3.0"


[build-dependencies]
protobuf-codegen = "3.3.0"

[dev-dependencies]
anyhow = "1.0.75"